@@ -17,8 +17,8 @@ public class EntityEnderman extends EntityMob {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte)0));
-		this.dataWatcher.addObject(17, new Byte((byte)0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte)0));
+		this.dataWatcher.addObject(17, Byte.valueOf((byte)0));
 	}
 
 	public void writeEntityToNBT(NBTTagCompound var1) {
